--- a/ConfigSettings/ConfigSettings.csproj
+++ b/ConfigSettings/ConfigSettings.csproj
@@ -56,6 +56,11 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="ItemRecycler.cs" />
+    <Compile Include="Location.cs" />
+    <Compile Include="PokemonToSnipe.cs" />
+    <Compile Include="PokemonTransfer.cs" />
+    <Compile Include="PokemonTransferFilter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
