--- a/ConfigSettings/ConfigSettings.csproj
+++ b/ConfigSettings/ConfigSettings.csproj
@@ -63,6 +63,7 @@
     <Compile Include="PokemonTransferFilter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StaticList.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
