--- a/ConfigSettings/Config/config.json
+++ b/ConfigSettings/Config/config.json
@@ -2,40 +2,41 @@
   "TranslationLanguageCode": "en",
   "AutoUpdate": true,
   "TransferConfigAndAuthOnUpdate": true,
+  "UseWebsocket": false,
   "StartupWelcomeDelay": false,
-  "AmountOfPokemonToDisplayOnStart": 20,
-  "ShowPokeballCountsBeforeRecycle": false,
+  "AmountOfPokemonToDisplayOnStart": 10,
+  "ShowPokeballCountsBeforeRecycle": true,
+  "CatchPokemon": true,
   "AutomaticallyLevelUpPokemon": false,
-  "AmountOfTimesToUpgradeLoop": 0,
-  "GetMinStarDustForLevelUp": 0,
+  "AmountOfTimesToUpgradeLoop": 5,
+  "GetMinStarDustForLevelUp": 5000,
   "LevelUpByCPorIv": "iv",
-  "UpgradePokemonCpMinimum": 1800.0,
+  "UpgradePokemonCpMinimum": 1000.0,
   "UpgradePokemonIvMinimum": 95.0,
   "UpgradePokemonMinimumStatsOperator": "and",
   "DisableHumanWalking": false,
-  "DefaultAltitude": 10.0,
   "DefaultLatitude": 35.299925,
   "DefaultLongitude": 139.480876,
-  "WalkingSpeedInKilometerPerHour": 12.0,
+  "WalkingSpeedInKilometerPerHour": 31.0,
   "MaxSpawnLocationOffset": 10,
   "DelayBetweenPlayerActions": 5000,
   "DelayBetweenPokemonCatch": 2000,
-  "DumpPokemonStats": true,
-  "EvolveAboveIvValue": 92.0,
-  "EvolveAllPokemonAboveIv": true,
+  "DumpPokemonStats": false,
+  "EvolveAboveIvValue": 95.0,
+  "EvolveAllPokemonAboveIv": false,
   "EvolveAllPokemonWithEnoughCandy": true,
   "EvolveKeptPokemonsAtStorageUsagePercentage": 90.0,
   "KeepPokemonsThatCanEvolve": false,
-  "KeepMinCp": 1800,
-  "KeepMinIvPercentage": 92.9,
-  "KeepMinLvl": 0,
+  "KeepMinCp": 1250,
+  "KeepMinIvPercentage": 90.0,
+  "KeepMinLvl": 6,
   "KeepMinOperator": "or",
   "UseKeepMinLvl": false,
-  "PrioritizeIvOverCp": true,
+  "PrioritizeIvOverCp": false,
   "KeepMinDuplicatePokemon": 1,
   "UseGpxPathing": false,
   "GpxFile": "GPXPath.GPX",
-  "VerboseRecycling": false,
+  "VerboseRecycling": true,
   "RecycleInventoryAtUsagePercentage": 90.0,
   "UseEggIncubators": true,
   "UseLuckyEggConstantly": false,
@@ -46,8 +47,8 @@
   "UseBerriesMinIv": 90.0,
   "UseBerriesBelowCatchProbability": 0.2,
   "UseBerriesOperator": "and",
-  "UseSnipeOnlineLocationServer": true,
-  "UseSnipeLocationServer": true,
+  "UseSnipeOnlineLocationServer": false,
+  "UseSnipeLocationServer": false,
   "SnipeLocationServer": "localhost",
   "SnipeLocationServerPort": 16969,
   "GetSniperInfoFromPokezz": false,
@@ -56,87 +57,48 @@
   "MinPokeballsWhileSnipe": 0,
   "MinDelayBetweenSnipes": 60000,
   "SnipingScanOffset": 0.003,
-  "SnipeAtPokestops": false,
+  "SnipeAtPokestops": true,
   "SnipeIgnoreUnknownIv": false,
   "UseTransferIvForSnipe": false,
-  "RenamePokemon": true,
+  "SnipePokemonNotInPokedex": false,
+  "RenamePokemon": false,
   "RenameOnlyAboveIv": true,
   "RenameTemplate": "{1}_{0}",
-  "MaxPokeballsPerPokemon": 10,
-  "MaxTravelDistanceInMeters": 10000,
-  "TotalAmountOfPokeballsToKeep": 150,
-  "TotalAmountOfPotionsToKeep": 60,
-  "TotalAmountOfRevivesToKeep": 20,
+  "MaxPokeballsPerPokemon": 6,
+  "MaxTravelDistanceInMeters": 1000,
+  "TotalAmountOfPokeballsToKeep": 120,
+  "TotalAmountOfPotionsToKeep": 80,
+  "TotalAmountOfRevivesToKeep": 60,
   "TotalAmountOfBerriesToKeep": 50,
   "UseGreatBallAboveCp": 1000,
-  "UseUltraBallAboveCp": 1500,
-  "UseMasterBallAboveCp": 2000,
-  "UseGreatBallAboveIv": 70.0,
-  "UseUltraBallAboveIv": 90.0,
-  "UseGreatBallBelowCatchProbability": 0.0,
-  "UseUltraBallBelowCatchProbability": 0.0,
-  "UseMasterBallBelowCatchProbability": 0.0,
+  "UseUltraBallAboveCp": 1250,
+  "UseMasterBallAboveCp": 1500,
+  "UseGreatBallAboveIv": 85.0,
+  "UseUltraBallAboveIv": 95.0,
+  "UseGreatBallBelowCatchProbability": 0.2,
+  "UseUltraBallBelowCatchProbability": 0.1,
+  "UseMasterBallBelowCatchProbability": 0.05,
   "EnableHumanizedThrows": false,
-  "NiceThrowChance": 0,
-  "GreatThrowChance": 0,
-  "ExcellentThrowChance": 0,
-  "CurveThrowChance": 0,
-  "ForceGreatThrowOverIv": 0.0,
-  "ForceExcellentThrowOverIv": 0.0,
-  "ForceGreatThrowOverCp": 0,
-  "ForceExcellentThrowOverCp": 0,
+  "NiceThrowChance": 40,
+  "GreatThrowChance": 30,
+  "ExcellentThrowChance": 10,
+  "CurveThrowChance": 90,
+  "ForceGreatThrowOverIv": 90.0,
+  "ForceExcellentThrowOverIv": 95.0,
+  "ForceGreatThrowOverCp": 1000,
+  "ForceExcellentThrowOverCp": 1500,
   "TransferWeakPokemon": false,
   "TransferDuplicatePokemon": true,
   "TransferDuplicatePokemonOnCapture": true,
-  "FavoriteMinIvPercentage": 90.0,
-  "AutoFavoritePokemon": true,
-  "UsePokemonToNotCatchFilter": true,
+  "FavoriteMinIvPercentage": 95.0,
+  "AutoFavoritePokemon": false,
+  "UsePokemonToNotCatchFilter": false,
   "UsePokemonSniperFilterOnly": false,
   "WebSocketPort": 14251,
   "ItemRecycleFilter": [
     {
       "Key": "itemUnknown",
       "Value": 0
-    },
-    {
-      "Key": "itemPokeBall",
-      "Value": 30
-    },
-    {
-      "Key": "itemGreatBall",
-      "Value": 50
-    },
-    {
-      "Key": "itemUltraBall",
-      "Value": 150
-    },
-    {
-      "Key": "itemMasterBall",
-      "Value": 100
-    },
-    {
-      "Key": "itemPotion",
-      "Value": 0
-    },
-    {
-      "Key": "itemSuperPotion",
-      "Value": 10
-    },
-    {
-      "Key": "itemHyperPotion",
-      "Value": 20
-    },
-    {
-      "Key": "itemMaxPotion",
-      "Value": 30
-    },
-    {
-      "Key": "itemRevive",
-      "Value": 10
-    },
-    {
-      "Key": "itemMaxRevive",
-      "Value": 50
     },
     {
       "Key": "itemLuckyEgg",
@@ -175,26 +137,6 @@
       "Value": 100
     },
     {
-      "Key": "itemRazzBerry",
-      "Value": 50
-    },
-    {
-      "Key": "itemBlukBerry",
-      "Value": 10
-    },
-    {
-      "Key": "itemNanabBerry",
-      "Value": 10
-    },
-    {
-      "Key": "itemWeparBerry",
-      "Value": 30
-    },
-    {
-      "Key": "itemPinapBerry",
-      "Value": 30
-    },
-    {
       "Key": "itemSpecialCamera",
       "Value": 100
     },
@@ -219,31 +161,14 @@
     "venusaur",
     "charizard",
     "blastoise",
-    "nidoqueen",
-    "nidoking",
     "clefable",
-    "vileplume",
-    "arcanine",
-    "poliwrath",
-    "machamp",
-    "victreebel",
-    "golem",
-    "slowbro",
     "farfetchd",
-    "muk",
-    "exeggutor",
-    "lickitung",
     "chansey",
     "kangaskhan",
     "mrMime",
+    "tauros",
     "gyarados",
-    "lapras",
     "ditto",
-    "vaporeon",
-    "jolteon",
-    "flareon",
-    "porygon",
-    "aerodactyl",
     "snorlax",
     "articuno",
     "zapdos",
@@ -256,17 +181,7 @@
     "caterpie",
     "weedle",
     "pidgey",
-    "rattata",
-    "spearow",
-    "ekans",
-    "zubat",
-    "paras",
-    "venonat",
-    "psyduck",
-    "doduo",
-    "krabby",
-    "goldeen",
-    "staryu"
+    "rattata"
   ],
   "PokemonsToIgnore": [
     "caterpie",
@@ -278,131 +193,235 @@
     "doduo"
   ],
   "PokemonsTransferFilter": {
+    "Golduck": {
+      "KeepMinCp": 1800,
+      "KeepMinLvl": 6,
+      "UseKeepMinLvl": false,
+      "KeepMinIvPercentage": 95.0,
+      "KeepMinDuplicatePokemon": 1,
+      "Moves": [],
+      "KeepMinOperator": "or",
+      "MovesOperator": "or"
+    },
     "Farfetchd": {
       "KeepMinCp": 1250,
-      "KeepMinLvl": 0,
+      "KeepMinLvl": 6,
       "UseKeepMinLvl": false,
       "KeepMinIvPercentage": 80.0,
       "KeepMinDuplicatePokemon": 10,
       "Moves": [],
-      "KeepMinOperator": "or"
+      "KeepMinOperator": "or",
+      "MovesOperator": "or"
+    },
+    "Krabby": {
+      "KeepMinCp": 1250,
+      "KeepMinLvl": 6,
+      "UseKeepMinLvl": false,
+      "KeepMinIvPercentage": 95.0,
+      "KeepMinDuplicatePokemon": 1,
+      "Moves": [],
+      "KeepMinOperator": "or",
+      "MovesOperator": "or"
     },
     "Kangaskhan": {
       "KeepMinCp": 1500,
-      "KeepMinLvl": 0,
-      "UseKeepMinLvl": true,
+      "KeepMinLvl": 6,
+      "UseKeepMinLvl": false,
       "KeepMinIvPercentage": 60.0,
       "KeepMinDuplicatePokemon": 10,
-      "Moves": ["ia chay", "nhuc dau"],
-      "KeepMinOperator": "or"
+      "Moves": [],
+      "KeepMinOperator": "or",
+      "MovesOperator": "or"
+    },
+    "Horsea": {
+      "KeepMinCp": 1250,
+      "KeepMinLvl": 6,
+      "UseKeepMinLvl": false,
+      "KeepMinIvPercentage": 95.0,
+      "KeepMinDuplicatePokemon": 1,
+      "Moves": [],
+      "KeepMinOperator": "or",
+      "MovesOperator": "or"
+    },
+    "Staryu": {
+      "KeepMinCp": 1250,
+      "KeepMinLvl": 6,
+      "UseKeepMinLvl": false,
+      "KeepMinIvPercentage": 95.0,
+      "KeepMinDuplicatePokemon": 1,
+      "Moves": [],
+      "KeepMinOperator": "or",
+      "MovesOperator": "or"
     },
     "MrMime": {
       "KeepMinCp": 1250,
-      "KeepMinLvl": 0,
+      "KeepMinLvl": 6,
       "UseKeepMinLvl": false,
       "KeepMinIvPercentage": 40.0,
       "KeepMinDuplicatePokemon": 10,
       "Moves": [],
-      "KeepMinOperator": "or"
+      "KeepMinOperator": "or",
+      "MovesOperator": "or"
+    },
+    "Scyther": {
+      "KeepMinCp": 1800,
+      "KeepMinLvl": 6,
+      "UseKeepMinLvl": false,
+      "KeepMinIvPercentage": 80.0,
+      "KeepMinDuplicatePokemon": 1,
+      "Moves": [],
+      "KeepMinOperator": "or",
+      "MovesOperator": "or"
+    },
+    "Jynx": {
+      "KeepMinCp": 1250,
+      "KeepMinLvl": 6,
+      "UseKeepMinLvl": false,
+      "KeepMinIvPercentage": 95.0,
+      "KeepMinDuplicatePokemon": 1,
+      "Moves": [],
+      "KeepMinOperator": "or",
+      "MovesOperator": "or"
+    },
+    "Electabuzz": {
+      "KeepMinCp": 1250,
+      "KeepMinLvl": 6,
+      "UseKeepMinLvl": false,
+      "KeepMinIvPercentage": 80.0,
+      "KeepMinDuplicatePokemon": 1,
+      "Moves": [],
+      "KeepMinOperator": "or",
+      "MovesOperator": "or"
+    },
+    "Magmar": {
+      "KeepMinCp": 1500,
+      "KeepMinLvl": 6,
+      "UseKeepMinLvl": false,
+      "KeepMinIvPercentage": 80.0,
+      "KeepMinDuplicatePokemon": 1,
+      "Moves": [],
+      "KeepMinOperator": "or",
+      "MovesOperator": "or"
+    },
+    "Pinsir": {
+      "KeepMinCp": 1800,
+      "KeepMinLvl": 6,
+      "UseKeepMinLvl": false,
+      "KeepMinIvPercentage": 95.0,
+      "KeepMinDuplicatePokemon": 1,
+      "Moves": [],
+      "KeepMinOperator": "or",
+      "MovesOperator": "or"
     },
     "Tauros": {
       "KeepMinCp": 1250,
-      "KeepMinLvl": 0,
+      "KeepMinLvl": 6,
       "UseKeepMinLvl": false,
       "KeepMinIvPercentage": 90.0,
       "KeepMinDuplicatePokemon": 10,
       "Moves": [],
-      "KeepMinOperator": "or"
+      "KeepMinOperator": "or",
+      "MovesOperator": "or"
     },
     "Magikarp": {
-      "KeepMinCp": 1250,
-      "KeepMinLvl": 0,
+      "KeepMinCp": 200,
+      "KeepMinLvl": 6,
       "UseKeepMinLvl": false,
       "KeepMinIvPercentage": 95.0,
       "KeepMinDuplicatePokemon": 1,
       "Moves": [],
-      "KeepMinOperator": "or"
+      "KeepMinOperator": "or",
+      "MovesOperator": "or"
     },
     "Gyarados": {
       "KeepMinCp": 1250,
-      "KeepMinLvl": 0,
+      "KeepMinLvl": 6,
       "UseKeepMinLvl": false,
       "KeepMinIvPercentage": 90.0,
-      "KeepMinDuplicatePokemon": 1,
-      "Moves": [],
-      "KeepMinOperator": "or"
-    },
-    "Lapras": {
-      "KeepMinCp": 1000,
-      "KeepMinLvl": 0,
-      "UseKeepMinLvl": false,
-      "KeepMinIvPercentage": 10.0,
       "KeepMinDuplicatePokemon": 10,
       "Moves": [],
-      "KeepMinOperator": "or"
+      "KeepMinOperator": "or",
+      "MovesOperator": "or"
+    },
+    "Lapras": {
+      "KeepMinCp": 1800,
+      "KeepMinLvl": 6,
+      "UseKeepMinLvl": false,
+      "KeepMinIvPercentage": 80.0,
+      "KeepMinDuplicatePokemon": 10,
+      "Moves": [],
+      "KeepMinOperator": "or",
+      "MovesOperator": "or"
     },
     "Eevee": {
       "KeepMinCp": 1250,
-      "KeepMinLvl": 0,
+      "KeepMinLvl": 6,
       "UseKeepMinLvl": false,
       "KeepMinIvPercentage": 95.0,
       "KeepMinDuplicatePokemon": 1,
       "Moves": [],
-      "KeepMinOperator": "or"
+      "KeepMinOperator": "or",
+      "MovesOperator": "or"
     },
     "Vaporeon": {
       "KeepMinCp": 1500,
-      "KeepMinLvl": 0,
+      "KeepMinLvl": 6,
       "UseKeepMinLvl": false,
       "KeepMinIvPercentage": 90.0,
       "KeepMinDuplicatePokemon": 1,
       "Moves": [],
-      "KeepMinOperator": "or"
+      "KeepMinOperator": "or",
+      "MovesOperator": "or"
     },
     "Jolteon": {
       "KeepMinCp": 1500,
-      "KeepMinLvl": 0,
+      "KeepMinLvl": 6,
       "UseKeepMinLvl": false,
       "KeepMinIvPercentage": 90.0,
       "KeepMinDuplicatePokemon": 1,
       "Moves": [],
-      "KeepMinOperator": "or"
+      "KeepMinOperator": "or",
+      "MovesOperator": "or"
     },
     "Flareon": {
       "KeepMinCp": 1500,
-      "KeepMinLvl": 0,
+      "KeepMinLvl": 6,
       "UseKeepMinLvl": false,
       "KeepMinIvPercentage": 90.0,
       "KeepMinDuplicatePokemon": 1,
       "Moves": [],
-      "KeepMinOperator": "or"
+      "KeepMinOperator": "or",
+      "MovesOperator": "or"
     },
     "Porygon": {
       "KeepMinCp": 1250,
-      "KeepMinLvl": 0,
+      "KeepMinLvl": 6,
       "UseKeepMinLvl": false,
       "KeepMinIvPercentage": 60.0,
       "KeepMinDuplicatePokemon": 1,
       "Moves": [],
-      "KeepMinOperator": "or"
+      "KeepMinOperator": "or",
+      "MovesOperator": "or"
     },
     "Snorlax": {
       "KeepMinCp": 2600,
-      "KeepMinLvl": 0,
+      "KeepMinLvl": 6,
       "UseKeepMinLvl": false,
       "KeepMinIvPercentage": 90.0,
       "KeepMinDuplicatePokemon": 10,
       "Moves": [],
-      "KeepMinOperator": "or"
+      "KeepMinOperator": "or",
+      "MovesOperator": "or"
     },
     "Dragonite": {
       "KeepMinCp": 2600,
-      "KeepMinLvl": 0,
+      "KeepMinLvl": 6,
       "UseKeepMinLvl": false,
       "KeepMinIvPercentage": 90.0,
       "KeepMinDuplicatePokemon": 10,
       "Moves": [],
-      "KeepMinOperator": "or"
+      "KeepMinOperator": "or",
+      "MovesOperator": "or"
     }
   },
   "PokemonToSnipe": {
@@ -422,29 +441,57 @@
       {
         "Latitude": 51.5025343,
         "Longitude": -0.2055027
+      },
+      {
+        "Latitude": 25.766791,
+        "Longitude": -80.130863
       }
     ],
     "Pokemon": [
       "venusaur",
       "charizard",
       "blastoise",
+      "beedrill",
       "raichu",
       "sandslash",
       "nidoqueen",
       "nidoking",
+      "clefable",
       "ninetales",
+      "golbat",
+      "vileplume",
+      "golduck",
+      "primeape",
       "arcanine",
+      "poliwrath",
       "alakazam",
       "machamp",
+      "golem",
+      "rapidash",
+      "slowbro",
       "farfetchd",
+      "muk",
+      "cloyster",
       "gengar",
       "exeggutor",
+      "marowak",
+      "hitmonchan",
+      "lickitung",
+      "rhydon",
       "chansey",
       "kangaskhan",
+      "starmie",
       "mrMime",
+      "scyther",
+      "jynx",
+      "electabuzz",
+      "magmar",
       "gyarados",
       "lapras",
       "ditto",
+      "vaporeon",
+      "jolteon",
+      "flareon",
       "porygon",
       "kabutops",
       "aerodactyl",
@@ -458,7 +505,6 @@
     ]
   },
   "PokemonToUseMasterball": [
-    "ditto",
     "articuno",
     "zapdos",
     "moltres",
